--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,15 @@
-*{
+* {
     padding: 0;
     margin: 0;
 }
 
-body{
-    background-color: black;
+body {
+    /* background-color: black; */
+    background-color: rgb(0, 0, 0);
+    background-image: radial-gradient(rgb(78, 78, 78) 2px, transparent 3px);
+    background-size: 30px 30px;
 }
+
 .container {
     display: flex;
     width: 100vw;
@@ -17,18 +21,26 @@ body{
 }
 
 .menu {
-    position: fixed;
+    position: absolute;
     display: flex;
     flex-direction: row;
     gap: 10px;
     justify-content: center;
 
-    background-color: lightgray;
+    background-color: rgb(255, 255, 255);
     padding: 10px;
-    border-radius: 1px 1px 20px 20px;
+    border-radius: 5px;
+    z-index: 100;
+
+    width: 200px;
+    height: 30px;
 }
 
-.cursor-size{
+.draggable {
+    cursor: grab;
+}
+
+.cursor-size {
     display: flex;
     flex-direction: row;
 }
